Graphviz/lib/expr/y.output
Terminals which are not used

   MINTOKEN
   INT
   CHAR
   VOID
   ADDRESS
   CALL
   ITERATE
   MEMBER
   POS
   PRAGMA
   PRE
   F2I
   F2S
   I2F
   I2S
   S2B
   S2F
   S2I
   F2X
   I2X
   S2X
   X2F
   X2I
   X2S
   X2X
   XPRINT
   MAXTOKEN


State 206 conflicts: 1 shift/reduce
State 236 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list action_list

    2 action_list: /* empty */
    3            | action_list action

    4 @1: /* empty */

    5 action: LABEL ':' @1 statement_list

    6 statement_list: /* empty */
    7               | statement_list statement

    8 statement: '{' statement_list '}'
    9          | expr_opt ';'

   10 @2: /* empty */

   11 statement: DECLARE @2 dcl_list ';'
   12          | IF '(' expr ')' statement else_opt
   13          | FOR '(' variable ')' statement
   14          | FOR '(' expr_opt ';' expr_opt ';' expr_opt ')' statement
   15          | WHILE '(' expr ')' statement

   16 @3: /* empty */

   17 statement: SWITCH '(' expr @3 ')' '{' switch_list '}'
   18          | BREAK expr_opt ';'
   19          | CONTINUE expr_opt ';'
   20          | RETURN expr_opt ';'

   21 switch_list: /* empty */
   22            | switch_list switch_item

   23 switch_item: case_list statement_list

   24 case_list: case_item
   25          | case_list case_item

   26 case_item: CASE constant ':'
   27          | DEFAULT ':'

   28 dcl_list: dcl_item
   29         | dcl_list ',' dcl_item

   30 @4: /* empty */

   31 dcl_item: dcl_name @4 array initialize

   32 dcl_name: NAME
   33         | DYNAMIC
   34         | ID
   35         | FUNCTION

   36 name: NAME
   37     | DYNAMIC

   38 else_opt: /* empty */
   39         | ELSE statement

   40 expr_opt: /* empty */
   41         | expr

   42 expr: '(' expr ')'
   43     | '(' DECLARE ')' expr
   44     | expr '<' expr
   45     | expr '-' expr
   46     | expr '*' expr
   47     | expr '/' expr
   48     | expr '%' expr
   49     | expr LS expr
   50     | expr RS expr
   51     | expr '>' expr
   52     | expr LE expr
   53     | expr GE expr
   54     | expr EQ expr
   55     | expr NE expr
   56     | expr '&' expr
   57     | expr '|' expr
   58     | expr '^' expr
   59     | expr '+' expr
   60     | expr AND expr
   61     | expr OR expr
   62     | expr ',' expr

   63 @5: /* empty */

   64 @6: /* empty */

   65 expr: expr '?' @5 expr ':' @6 expr
   66     | '!' expr
   67     | '~' expr
   68     | '-' expr
   69     | '+' expr
   70     | '&' variable
   71     | ARRAY '[' args ']'
   72     | FUNCTION '(' args ')'
   73     | GSUB '(' args ')'
   74     | SUB '(' args ')'
   75     | SUBSTR '(' args ')'
   76     | EXIT '(' expr ')'
   77     | RAND '(' ')'
   78     | SRAND '(' ')'
   79     | SRAND '(' expr ')'
   80     | PROCEDURE '(' args ')'
   81     | PRINT '(' args ')'
   82     | print '(' args ')'
   83     | scan '(' args ')'
   84     | variable assign
   85     | INC variable
   86     | variable INC
   87     | DEC variable
   88     | variable DEC
   89     | constant

   90 constant: CONSTANT
   91         | FLOATING
   92         | INTEGER
   93         | STRING
   94         | UNSIGNED

   95 print: PRINTF
   96      | QUERY
   97      | SPRINTF

   98 scan: SCANF
   99     | SSCANF

  100 variable: ID members
  101         | DYNAMIC index members
  102         | NAME

  103 array: /* empty */
  104      | '[' ']'
  105      | '[' DECLARE ']'

  106 index: /* empty */
  107      | '[' expr ']'

  108 args: /* empty */
  109     | arg_list

  110 arg_list: expr
  111         | arg_list ',' expr

  112 formals: /* empty */
  113        | DECLARE
  114        | formal_list

  115 formal_list: formal_item
  116            | formal_list ',' formal_item

  117 @7: /* empty */

  118 formal_item: DECLARE @7 name

  119 members: /* empty */
  120        | member
  121        | '.' ID member

  122 member: '.' ID
  123       | '.' NAME

  124 assign: /* empty */
  125       | '=' expr

  126 initialize: assign

  127 @8: /* empty */

  128 @9: /* empty */

  129 initialize: '(' @8 formals @9 ')' '{' statement_list '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 66
'%' (37) 48
'&' (38) 56 70
'(' (40) 12 13 14 15 17 42 43 72 73 74 75 76 77 78 79 80 81 82 83 129
')' (41) 12 13 14 15 17 42 43 72 73 74 75 76 77 78 79 80 81 82 83 129
'*' (42) 46
'+' (43) 59 69
',' (44) 29 62 111 116
'-' (45) 45 68
'.' (46) 121 122 123
'/' (47) 47
':' (58) 5 26 27 65
';' (59) 9 11 14 18 19 20
'<' (60) 44
'=' (61) 125
'>' (62) 51
'?' (63) 65
'[' (91) 71 104 105 107
']' (93) 71 104 105 107
'^' (94) 58
'{' (123) 8 17 129
'|' (124) 57
'}' (125) 8 17 129
'~' (126) 67
error (256)
MINTOKEN (258)
INT (259)
INTEGER (260) 92
UNSIGNED (261) 94
CHAR (262)
FLOATING (263) 91
STRING (264) 93
VOID (265)
ADDRESS (266)
ARRAY (267) 71
BREAK (268) 18
CALL (269)
CASE (270) 26
CONSTANT (271) 90
CONTINUE (272) 19
DECLARE (273) 11 43 105 113 118
DEFAULT (274) 27
DYNAMIC (275) 33 37 101
ELSE (276) 39
EXIT (277) 76
FOR (278) 13 14
FUNCTION (279) 35 72
GSUB (280) 73
ITERATE (281)
ID (282) 34 100 121 122
IF (283) 12
LABEL (284) 5
MEMBER (285)
NAME (286) 32 36 102 123
POS (287)
PRAGMA (288)
PRE (289)
PRINT (290) 81
PRINTF (291) 95
PROCEDURE (292) 80
QUERY (293) 96
RAND (294) 77
RETURN (295) 20
SCANF (296) 98
SPRINTF (297) 97
SRAND (298) 78 79
SSCANF (299) 99
SUB (300) 74
SUBSTR (301) 75
SWITCH (302) 17
WHILE (303) 15
F2I (304)
F2S (305)
I2F (306)
I2S (307)
S2B (308)
S2F (309)
S2I (310)
F2X (311)
I2X (312)
S2X (313)
X2F (314)
X2I (315)
X2S (316)
X2X (317)
XPRINT (318)
OR (319) 61
AND (320) 60
NE (321) 55
EQ (322) 54
GE (323) 53
LE (324) 52
RS (325) 50
LS (326) 49
UNARY (327)
DEC (328) 87 88
INC (329) 85 86
CAST (330)
MAXTOKEN (331)


Nonterminals, with rules where they appear

$accept (101)
    on left: 0
program (102)
    on left: 1, on right: 0
action_list (103)
    on left: 2 3, on right: 1 3
action (104)
    on left: 5, on right: 3
@1 (105)
    on left: 4, on right: 5
statement_list (106)
    on left: 6 7, on right: 1 5 7 8 23 129
statement (107)
    on left: 8 9 11 12 13 14 15 17 18 19 20, on right: 7 12 13 14 15
    39
@2 (108)
    on left: 10, on right: 11
@3 (109)
    on left: 16, on right: 17
switch_list (110)
    on left: 21 22, on right: 17 22
switch_item (111)
    on left: 23, on right: 22
case_list (112)
    on left: 24 25, on right: 23 25
case_item (113)
    on left: 26 27, on right: 24 25
dcl_list (114)
    on left: 28 29, on right: 11 29
dcl_item (115)
    on left: 31, on right: 28 29
@4 (116)
    on left: 30, on right: 31
dcl_name (117)
    on left: 32 33 34 35, on right: 31
name (118)
    on left: 36 37, on right: 118
else_opt (119)
    on left: 38 39, on right: 12
expr_opt (120)
    on left: 40 41, on right: 9 14 18 19 20
expr (121)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89, on right: 12 15 17 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 65 66 67 68 69 76 79
    107 110 111 125
@5 (122)
    on left: 63, on right: 65
@6 (123)
    on left: 64, on right: 65
constant (124)
    on left: 90 91 92 93 94, on right: 26 89
print (125)
    on left: 95 96 97, on right: 82
scan (126)
    on left: 98 99, on right: 83
variable (127)
    on left: 100 101 102, on right: 13 70 84 85 86 87 88
array (128)
    on left: 103 104 105, on right: 31
index (129)
    on left: 106 107, on right: 101
args (130)
    on left: 108 109, on right: 71 72 73 74 75 80 81 82 83
arg_list (131)
    on left: 110 111, on right: 109 111
formals (132)
    on left: 112 113 114, on right: 129
formal_list (133)
    on left: 115 116, on right: 114 116
formal_item (134)
    on left: 118, on right: 115 116
@7 (135)
    on left: 117, on right: 118
members (136)
    on left: 119 120 121, on right: 100 101
member (137)
    on left: 122 123, on right: 120 121
assign (138)
    on left: 124 125, on right: 84 126
initialize (139)
    on left: 126 129, on right: 31
@8 (140)
    on left: 127, on right: 129
@9 (141)
    on left: 128, on right: 129


state 0

    0 $accept: . program $end

    $default  reduce using rule 6 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list . action_list
    7 statement_list: statement_list . statement

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    BREAK      shift, and go to state 9
    CONSTANT   shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DECLARE    shift, and go to state 12
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FOR        shift, and go to state 15
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    IF         shift, and go to state 19
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    RETURN     shift, and go to state 26
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    SWITCH     shift, and go to state 33
    WHILE      shift, and go to state 34
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42
    '{'        shift, and go to state 43

    ';'       reduce using rule 40 (expr_opt)
    $default  reduce using rule 2 (action_list)

    action_list  go to state 44
    statement    go to state 45
    expr_opt     go to state 46
    expr         go to state 47
    constant     go to state 48
    print        go to state 49
    scan         go to state 50
    variable     go to state 51


state 3

    0 $accept: program $end .

    $default  accept


state 4

   92 constant: INTEGER .

    $default  reduce using rule 92 (constant)


state 5

   94 constant: UNSIGNED .

    $default  reduce using rule 94 (constant)


state 6

   91 constant: FLOATING .

    $default  reduce using rule 91 (constant)


state 7

   93 constant: STRING .

    $default  reduce using rule 93 (constant)


state 8

   71 expr: ARRAY . '[' args ']'

    '['  shift, and go to state 52


state 9

   18 statement: BREAK . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    $default  reduce using rule 40 (expr_opt)

    expr_opt  go to state 53
    expr      go to state 47
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 10

   90 constant: CONSTANT .

    $default  reduce using rule 90 (constant)


state 11

   19 statement: CONTINUE . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    $default  reduce using rule 40 (expr_opt)

    expr_opt  go to state 54
    expr      go to state 47
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 12

   11 statement: DECLARE . @2 dcl_list ';'

    $default  reduce using rule 10 (@2)

    @2  go to state 55


state 13

  101 variable: DYNAMIC . index members

    '['  shift, and go to state 56

    $default  reduce using rule 106 (index)

    index  go to state 57


state 14

   76 expr: EXIT . '(' expr ')'

    '('  shift, and go to state 58


state 15

   13 statement: FOR . '(' variable ')' statement
   14          | FOR . '(' expr_opt ';' expr_opt ';' expr_opt ')' statement

    '('  shift, and go to state 59


state 16

   72 expr: FUNCTION . '(' args ')'

    '('  shift, and go to state 60


state 17

   73 expr: GSUB . '(' args ')'

    '('  shift, and go to state 61


state 18

  100 variable: ID . members

    '.'  shift, and go to state 62

    $default  reduce using rule 119 (members)

    members  go to state 63
    member   go to state 64


state 19

   12 statement: IF . '(' expr ')' statement else_opt

    '('  shift, and go to state 65


state 20

  102 variable: NAME .

    $default  reduce using rule 102 (variable)


state 21

   81 expr: PRINT . '(' args ')'

    '('  shift, and go to state 66


state 22

   95 print: PRINTF .

    $default  reduce using rule 95 (print)


state 23

   80 expr: PROCEDURE . '(' args ')'

    '('  shift, and go to state 67


state 24

   96 print: QUERY .

    $default  reduce using rule 96 (print)


state 25

   77 expr: RAND . '(' ')'

    '('  shift, and go to state 68


state 26

   20 statement: RETURN . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    $default  reduce using rule 40 (expr_opt)

    expr_opt  go to state 69
    expr      go to state 47
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 27

   98 scan: SCANF .

    $default  reduce using rule 98 (scan)


state 28

   97 print: SPRINTF .

    $default  reduce using rule 97 (print)


state 29

   78 expr: SRAND . '(' ')'
   79     | SRAND . '(' expr ')'

    '('  shift, and go to state 70


state 30

   99 scan: SSCANF .

    $default  reduce using rule 99 (scan)


state 31

   74 expr: SUB . '(' args ')'

    '('  shift, and go to state 71


state 32

   75 expr: SUBSTR . '(' args ')'

    '('  shift, and go to state 72


state 33

   17 statement: SWITCH . '(' expr @3 ')' '{' switch_list '}'

    '('  shift, and go to state 73


state 34

   15 statement: WHILE . '(' expr ')' statement

    '('  shift, and go to state 74


state 35

   70 expr: '&' . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 18
    NAME     shift, and go to state 20

    variable  go to state 75


state 36

   69 expr: '+' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 76
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 37

   68 expr: '-' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 77
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 38

   66 expr: '!' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 78
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 39

   67 expr: '~' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 79
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 40

   87 expr: DEC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 18
    NAME     shift, and go to state 20

    variable  go to state 80


state 41

   85 expr: INC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 18
    NAME     shift, and go to state 20

    variable  go to state 81


state 42

   42 expr: '(' . expr ')'
   43     | '(' . DECLARE ')' expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DECLARE    shift, and go to state 82
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 83
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 43

    8 statement: '{' . statement_list '}'

    $default  reduce using rule 6 (statement_list)

    statement_list  go to state 84


state 44

    1 program: statement_list action_list .
    3 action_list: action_list . action

    LABEL  shift, and go to state 85

    $default  reduce using rule 1 (program)

    action  go to state 86


state 45

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


state 46

    9 statement: expr_opt . ';'

    ';'  shift, and go to state 87


state 47

   41 expr_opt: expr .
   44 expr: expr . '<' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | expr . '%' expr
   49     | expr . LS expr
   50     | expr . RS expr
   51     | expr . '>' expr
   52     | expr . LE expr
   53     | expr . GE expr
   54     | expr . EQ expr
   55     | expr . NE expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr
   59     | expr . '+' expr
   60     | expr . AND expr
   61     | expr . OR expr
   62     | expr . ',' expr
   65     | expr . '?' @5 expr ':' @6 expr

    ','  shift, and go to state 88
    '?'  shift, and go to state 89
    OR   shift, and go to state 90
    AND  shift, and go to state 91
    '|'  shift, and go to state 92
    '^'  shift, and go to state 93
    '&'  shift, and go to state 94
    NE   shift, and go to state 95
    EQ   shift, and go to state 96
    '<'  shift, and go to state 97
    '>'  shift, and go to state 98
    GE   shift, and go to state 99
    LE   shift, and go to state 100
    RS   shift, and go to state 101
    LS   shift, and go to state 102
    '+'  shift, and go to state 103
    '-'  shift, and go to state 104
    '*'  shift, and go to state 105
    '/'  shift, and go to state 106
    '%'  shift, and go to state 107

    $default  reduce using rule 41 (expr_opt)


state 48

   89 expr: constant .

    $default  reduce using rule 89 (expr)


state 49

   82 expr: print . '(' args ')'

    '('  shift, and go to state 108


state 50

   83 expr: scan . '(' args ')'

    '('  shift, and go to state 109


state 51

   84 expr: variable . assign
   86     | variable . INC
   88     | variable . DEC

    '='  shift, and go to state 110
    DEC  shift, and go to state 111
    INC  shift, and go to state 112

    $default  reduce using rule 124 (assign)

    assign  go to state 113


state 52

   71 expr: ARRAY '[' . args ']'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    $default  reduce using rule 108 (args)

    expr      go to state 114
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51
    args      go to state 115
    arg_list  go to state 116


state 53

   18 statement: BREAK expr_opt . ';'

    ';'  shift, and go to state 117


state 54

   19 statement: CONTINUE expr_opt . ';'

    ';'  shift, and go to state 118


state 55

   11 statement: DECLARE @2 . dcl_list ';'

    DYNAMIC   shift, and go to state 119
    FUNCTION  shift, and go to state 120
    ID        shift, and go to state 121
    NAME      shift, and go to state 122

    dcl_list  go to state 123
    dcl_item  go to state 124
    dcl_name  go to state 125


state 56

  107 index: '[' . expr ']'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 126
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 57

  101 variable: DYNAMIC index . members

    '.'  shift, and go to state 62

    $default  reduce using rule 119 (members)

    members  go to state 127
    member   go to state 64


state 58

   76 expr: EXIT '(' . expr ')'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    expr      go to state 128
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 51


state 59

   13 statement: FOR '(' . variable ')' statement
   14          | FOR '(' . expr_opt ';' expr_opt ';' expr_opt ')' statement

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 8
    CONSTANT   shift, and go to state 10
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 18
    NAME       shift, and go to state 20
    PRINT      shift, and go to state 21
    PRINTF     shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    QUERY      shift, and go to state 24
    RAND       shift, and go to state 25
    SCANF      shift, and go to state 27
    SPRINTF    shift, and go to state 28
    SRAND      shift, and go to state 29
    SSCANF     shift, and go to state 30
    SUB        shift, and go to state 31
    SUBSTR     shift, and go to state 32
    '&'        shift, and go to state 35
    '+'        shift, and go to state 36
    '-'        shift, and go to state 37
    '!'        shift, and go to state 38
    '~'        shift, and go to state 39
    DEC        shift, and go to state 40
    INC        shift, and go to state 41
    '('        shift, and go to state 42

    $default  reduce using rule 40 (expr_opt)

    expr_opt  go to state 129
    expr      go to state 47
    constant  go to state 48
    print     go to state 49
    scan      go to state 50
    variable  go to state 130


state 60

   72 expr: FUNCTION '(' . args ')'
